--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
 
       # Paso 1: InfraConfig (Configuración de infraestructura)
       - name: Configurar infraestructura
-        uses: ./actions/infra-config
+        uses: ./.github/actions/infra-config
 
       # Paso 2: Build (Construcción de la aplicación)
       - name: Build
@@ -28,7 +28,7 @@ jobs:
 
       # Paso 4: Tests (Ejecutar tests)
       - name: Ejecutar tests
-        uses: ./actions/tests
+        uses: ./.github/actions/tests
         with:
           param1: 'Test1'
           param2: 'Test2'
